# beeriq

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  utils.py
backend/app/integrations/: __init__.py  fetcher.py  openbrewerydb.py
backend/app/models/: __init__.py  base.py  brewery.py  brewery_score.py  change_event.py  discovered_url.py  extraction.py  page_snapshot.py
backend/app/repositories/: __init__.py  base.py  brewery.py  brewery_score.py  change_event.py  discovered_url.py  extraction.py  page_snapshot.py
backend/app/schemas/: __init__.py  brewery.py  diff.py  directory.py  discovery.py  extraction.py  feed.py  score.py  stats.py
backend/app/seeds/: __init__.py  demo_activity.py  directory.py  nh_breweries.py  nh_directory.py  scrape_taps.py
backend/app/services/: __init__.py  brewery.py  classifier.py  current.py  diff.py  discovery.py  extraction.py  feed.py  scoring.py  scrape.py  tap_parser.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_diff_engine.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_breweries_api.py  test_classifier.py  test_config.py  test_current.py  test_diff.py  test_discovery.py  test_discovery_api.py  test_extraction.py  test_feed.py  test_scoring.py  test_scrape.py  test_tap_parser.py  test_utils.py
(+73 files in other folders)
